# infimum-core

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
core/: README.md  __init__.py  exceptions.py  pyproject.toml
core/ai/: __init__.py
core/ai/base/: __init__.py
core/ai/base/data/: __init__.py  base.py  factory.py  item.py  registration.py  registry.py
core/ai/base/observers/: __init__.py  base.py  events.py
core/ai/base/preprocessing/: __init__.py  factory.py  registration.py  registry.py
core/ai/base/providers/: __init__.py  base.py  config.py  factory.py  registration.py  registry.py
core/ai/base/utils/: singleton.py
core/ai/data/: __init__.py
core/ai/data/loaders/: __init__.py  audio.py  image.py  multimodal.py  text.py  video.py
core/ai/embeddings/: base.py  factory.py  openai_provider.py
core/ai/embeddings/providers/: __init__.py  openai.py
core/ai/llm/: __init__.py
core/ai/llm/agent/: __init__.py  agent.py  memory.py  planner.py  prompts.py  tools.py
core/ai/llm/agentic_agent/agent/: agent.py  state.py
core/ai/llm/agentic_agent/api/: __init__.py  main.py  middleware.py  routes.py
core/ai/llm/agentic_agent/config/: settings.py
core/ai/llm/agentic_agent/memory/: conversation_memory.py  memory_manager.py
core/ai/llm/agentic_agent/tools/: __init__.py  base.py  search_tools.py  time_tools.py  weather_tools.py
core/ai/llm/agentic_agent/utils/: __init__.py  logging.py
core/ai/llm/models/: __init__.py
core/ai/llm/providers/: langchain.py
core/ai/preprocessing/: __init__.py
core/ai/preprocessing/embeddings/: __init__.py  base.py  openai_provider.py
core/ai/preprocessing/transforms/: __init__.py  audio.py  image.py  text.py
core/ai/providers/: __init__.py
core/ai/providers/llm/: langchain.py
core/ai/providers/vlm/: llava.py  model_manager.py
core/ai/speech/: __init__.py
core/ai/speech/audio/: validation.py
core/ai/speech/models/: speech2text.py  text2speech.py
core/ai/speech/providers/: __init__.py  medasr_provider.py  medasr_repository.py  whisper_provider.py
core/ai/vlm/: __init__.py  decorators.py
core/ai/vlm/models/: __init__.py
core/ai/vlm/providers/: __init__.py  deepseek_ocr.py  llava.py  mobileclip.py  model_manager.py  xclip.py
core/base/: __init__.py  api_router_registry.py  entity.py  registry.py  repository.py
core/base/repository/: __init__.py
core/database/: __init__.py  base.py  config.py  interfaces.py  milvus.py  mongo.py  plugins.py  postgres.py  qdrant.py  registry.py
core/engine/: __init__.py  context.py  decorators.py  metadata.py  package_utils.py  startup.py
core/engine/security/: __init__.py  email_service.py  jwt_service.py  token_blacklist.py
core/networking/: rtsp_utils.py
core/networking/queue/: analyze_image_tasks.py  celery_app.py  distributed_tasks.py  persist_analysis_tasks.py  queue_selector.py
core/security/: __init__.py  api_key_auth.py  jwt_auth.py
core/tests/: test_exceptions.py
core/tests/ai/base/: __init__.py  test_data.py  test_integration.py  test_observers.py  test_preprocessing.py  test_providers.py  test_registration.py  test_video_streamer.py
core/tests/ai/embeddings/: test_integration.py  test_providers.py
core/tests/ai/preprocessing/embeddings/: test_providers.py
core/tests/ai/vlm/: test_xclip.py
core/tests/ai/whisper_provider/: test_whisper_provider.py
core/tests/base/: test_config.py  test_entity_registry_integration.py
core/tests/database/: test_interfaces.py  test_milvus.py  test_postgres.py  test_qdrant.py  test_registry.py
core/tests/engine/: test_context.py  test_startup.py
core/tests/engine/design_pattern/: test_observers.py  test_singleton.py
core/tests/engine/security/: test_password.py  test_token_blacklist.py
core/tests/utils/: test_crawling_utils.py  test_embedding_utils.py  test_string_utils.py
core/utils/: auto_config.py  crawling.py  embedding_utils.py  error_handling.py  file_utils.py  redis_client.py
docs/: getting-started.md  index.md  requirements.txt
docs/api/: ai.md  base.md  database.md  engine.md  utils.md
docs/api/ai/: base.md  data.md  embeddings.md  llm.md  preprocessing.md  speech.md  vlm.md
docs/api/base/: entity.md  registry.md  repository.md
docs/api/database/: base.md  interfaces.md  postgres.md
docs/api/engine/: context.md  decorators.md  security.md  startup.md
docs/api/utils/: auto_config.md  constants.md
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/docs/llm_guide/: llm-daisy.txt
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/assets/: config.json
infimum/: README.md  __init__.py
infimum/ai/: __init__.py
infimum/ai/embeddings/: __init__.py  base.py
infimum/ai/vlm/: __init__.py
infimum/base/: __init__.py  api_router_registry.py  entity.py  registry.py  repository.py
infimum/database/: __init__.py  base.py  interfaces.py  milvus.py  mongo.py  plugins.py  postgres.py  qdrant.py  registry.py
infimum/engine/: __init__.py  metadata.py  package_utils.py
infimum/engine/design_pattern/: __init__.py  observer.py
infimum/engine/security/: __init__.py  email_service.py  jwt_service.py  password.py  token_blacklist.py  types.py
infimum/tests/: __init__.py  test_deepseek_ocr.py  test_exceptions.py
infimum/tests/base/: test_config.py  test_entity.py  test_entity_registry_integration.py  test_registry.py
infimum/tests/database/: test_postgres.py  test_registry.py
infimum/tests/engine/: __init__.py  test_context.py  test_metadata.py
infimum/utils/: __init__.py  auto_config.py  constants.py  crawling.py  crawling_utils.py  embedding_utils.py  error_handling.py  file_utils.py  milvus_client.py  redis_client.py  string_utils.py  types.py  validation_utils.py
notebooks/: 001.base.ipynb  002.engine.ipynb  003.llm.ipynb  004.vlm.ipynb  005.speech.ipynb  pickleball_vibe.ipynb
tests/: conftest.py  test_deepseek_ocr.py  test_exceptions.py
tests/ai/: __init__.py
tests/base/: __init__.py
tests/utils/: test_constants.py  test_validation_utils.py
(+162 files in other folders)
