[project]
name = "infimum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "decorator==5.2.1",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "loguru>=0.7.3",
    "moviepy==2.2.1",
    "numpy==2.2.6",
    "openai>=2.15.0",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "pytest>=9.0.2",
    "python-decouple>=3.8",
    "python-dotenv==1.2.1",
    "scikit-learn>=1.7.2",
    "tqdm==4.67.1",
]
