[project]
name = "infimum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "decorator==5.2.1",
    "fastapi>=0.128.0",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "loguru>=0.7.3",
    "moviepy==2.2.1",
    "numpy==2.2.6",
    "openai>=2.15.0",
    "opencv-python==4.12.0.88",
    "pandas>=2.3.3",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "pymilvus>=2.6.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "python-decouple>=3.8",
    "python-dotenv==1.2.1",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.45",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
# MongoDB support (sync and async)
mongo = [
    "pymongo>=4.16.0",
    "motor>=3.6.0",  # For async MongoDB support
]

# Milvus vector database support
milvus = [
    "pymilvus>=2.6.6",
]

# Qdrant vector database support
qdrant = [
    "qdrant-client>=1.7.0",
]

# All database backends
all-db = [
    "pymongo>=4.16.0",
    "motor>=3.6.0",
    "pymilvus>=2.6.6",
    "qdrant-client>=1.7.0",
]

# Security module support (JWT, password hashing)
security = [
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]

# Development dependencies
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
